assets/ie/css/ie.css
.uw-thinstrip .uw-patch {
	background-image: url(../img/uw-sprite.png);
}

.uw-thinstrip .uw-wordmark {
	background-image: url(../img/uw-sprite.png);
}

.uw-thinstrip ul.uw-thin-links li.uw-search button {
	background-image: url(../img/mag.png);
	background-repeat: no-repeat;
	border: none;
}

.uw-thinstrip ul.uw-thin-links li.uw-quicklinks button {
	background-image: url(../img/quick.png);
	background-position: right 0;
	background-repeat: no-repeat;
}

.uw-thinstrip ul.uw-thin-links li.uw-quicklinks button:before {
	display: none;
}

.uw-thinstrip ul.uw-thin-links li a:after,
.uw-thinstrip ul.uw-thin-links li button:after {
	background-image: url(../img/uw-sprite.png);
}

.uw-search-bar-container a.search {
	background-image: url(../img/search.png);
}
#uw-container #quicklinks ul#big-links li span {
	background-image: url(../img/uw-sprite.png);
}

